added all tests
